<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <!--**************注册页面******************-->

    <!--    账号的输入-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60px"
        android:orientation="horizontal"
        android:padding="30px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_text"
            android:textColor="@color/black"
            android:textSize="42px" />
        <!--账号输入框-->
        <EditText
            android:id="@+id/username_et"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/edit_background"
            android:hint="@string/username_text_hint"
            android:maxLength="16"
            android:textColor="@color/black"
            android:textSize="42px" />

    </LinearLayout>
    <!--密码的输入-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="30px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="密码：    "
            android:textColor="@color/black"
            android:textSize="42px" />
        <!--密码输入框-->
        <EditText
            android:id="@+id/password_et"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/edit_background"
            android:hint="@string/password_text_hint"
            android:inputType="textPassword"
            android:maxLength="16"
            android:textColor="@color/black"
            android:textSize="42px" />

    </LinearLayout>








    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="30px">

        <EditText
            android:id="@+id/editText2"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="手机号"
            android:inputType="phone" />

        <Button
            android:id="@+id/button"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="center"
            android:text="获取验证码" />

    </LinearLayout>


















    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="30px">

        <TextView
            android:id="@+id/register_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/royalblue"
            android:gravity="center"
            android:padding="15px"
            android:text="@string/register_btn_text"
            android:textColor="@color/white"
            android:textSize="54px" />

    </LinearLayout>


</LinearLayout>
