<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgray">
    <!--*****************************个人中心页面*****************************-->


    <LinearLayout
        android:id="@+id/shangmian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/cornflowerblue">
        <!--用户头像-->
        <ImageView
            android:id="@+id/photoUrl_id"
            android:layout_width="300px"
            android:layout_height="300px"
            android:src="@drawable/ic_launcher_foreground" />
        <!--用户名-->
        <TextView
            android:id="@+id/username_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="200dp"
            android:text="@string/MYusername"
            android:textSize="24sp" />

    </LinearLayout>


    <!--    我的帖子-->
    <Button
        android:id="@+id/notification_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:layout_below="@+id/shangmian"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:textSize="40px"
        android:text="我的帖子"
         />

    <Button
        android:id="@+id/wodetiezi"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:layout_below="@+id/notification_et"
        android:layout_marginTop="2dp"
        android:gravity="center_vertical"
        android:textSize="40px"
        android:text="我的评论"
        />

    <!--    修改密码-->
    <Button
        android:id="@+id/change_password_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:layout_below="@+id/wodetiezi"
        android:layout_marginTop="2dp"
        android:gravity="center_vertical"
        android:textSize="40px"
        android:text="@string/change_password_btn"
        />

    <!--    关于我们-->
    <Button
        android:id="@+id/about_us_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:layout_below="@+id/change_password_et"
        android:layout_marginTop="2dp"
        android:gravity="center_vertical"
        android:textSize="40px"
        android:text="@string/about_us_btn"
        />

    <!--    给个好评-->
    <Button
        android:id="@+id/good_comment_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/about_us_et"
        android:background="@color/white"
        android:layout_marginTop="2dp"
        android:gravity="center_vertical"
        android:textSize="40px"
        android:text="@string/good_comment_btn"
        />

    <!--    软件版本-->
    <Button
        android:id="@+id/software_version_et"
        android:layout_width="match_parent"
        android:layout_below="@+id/good_comment_et"
        android:layout_height="50dp"
        android:background="@color/white"
        android:layout_marginTop="2dp"
        android:gravity="center_vertical"
        android:textSize="40px"
        android:text="@string/software_version_btn"
        />

    <Button
        android:id="@+id/yonghushouce"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/software_version_et"
        android:background="@color/white"
        android:layout_marginTop="2dp"
        android:gravity="center_vertical"
        android:textSize="40px"
        android:text="隐私协议"
        />

    <Button
        android:id="@+id/wodepl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:layout_below="@id/yonghushouce"
        android:layout_marginTop="2dp"
        android:gravity="center_vertical"
        android:textSize="40px"
        android:text="使用帮助"
        />

    <!--    退出登录-->
    <Button
        android:id="@+id/sign_out_et"
        android:layout_width="70dp"
        android:layout_below="@+id/wodepl"
        android:layout_height="50dp"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_centerInParent="true"
        android:text="登录"/>


    <LinearLayout
        android:id="@+id/xiamian"
        android:layout_width="match_parent"
        android:layout_height="139dp"
        android:layout_below="@id/sign_out_et"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="-15dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="71dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:src="@mipmap/shouye" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="71dp"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:src="@mipmap/fabu" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="71dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:src="@mipmap/grzx" />
    </LinearLayout>

</RelativeLayout>


